--- a/src/styles/TeacherPage/QueryControls-TeacherPage.scss
+++ b/src/styles/TeacherPage/QueryControls-TeacherPage.scss
@@ -9,7 +9,7 @@
         place-self: flex-start;
         align-self: center;
 
-        margin-left: 2%;
+        margin: 0 1rem !important;
     }
 
     .order-by-dropdown {
@@ -18,15 +18,14 @@
 
         flex-grow: 1;
 
-        margin-left: 1%;
-        margin-top: 8px;
+        margin-top: 0.25rem;
     }
 
     .query-label {
         place-self: flex-start;
         align-self: center;
 
-        margin-left: 2%;
+        margin-left: 1rem;
     }
 
     .query-input {
@@ -34,7 +33,7 @@
         align-self: center;
 
         padding: 4px;
-        margin: 3px 1% 0 1%;
+        margin: 0.3rem 1rem 0 1rem;
 
         width: 15%;
 
